--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,13 @@
 # Site settings
 markdown: kramdown
 permalink: pretty
+lsi: false
+safe: true
 
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://qrl.tips" # the base hostname & protocol for your site
+
+#include: [, ]
 
 
 ################
