--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown: kramdown
 permalink: pretty
 lsi: false
 safe: true
-
+source: /
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://qrl.tips" # the base hostname & protocol for your site
 
